Pjfcb 2482 prepare wildfly 26.1.2 1 psi (#33)
* Merge tag '18.1.2.Final' into PSI-18.x

* Next is 18.1.2-1-PSI-SNAPSHOT

Co-authored-by: Noworzyń, Marcin <mnoworzyn@psi.pl>